# clarity

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.base.json
docs/: api.md  architecture.md
engine/: .env.example  package.json  tsconfig.json
engine/src/: server.ts
engine/src/analyzers/: blockaid.ts  contractParser.ts  counterparty.ts  risk.ts  tenderly.ts  translator.ts
engine/src/analyzers/__tests__/: contractParser.test.ts
engine/src/routes/: analyze.ts  score.ts  translate.ts
engine/src/storage/: creditStore.ts
extension/: README.md  manifest.json  package.json  tsconfig.json  vite.config.ts
extension/src/: background.ts  bridge.ts  content.ts
extension/src/popup/: App.tsx  main.tsx  popup.html
indexer/: README.md  pyproject.toml  requirements.txt
indexer/src/: __init__.py  main.py  rpc.py  scoring.py  seed_demo.py  storage.py
indexer/src/protocols/: aave_v3.py  registry.py
indexer/src/tests/: test_aave_parsers.py  test_scoring.py
shared/: package.json
shared/locales/: en.json  es.json  ko.json  pt.json  ru.json  tr.json  zh.json
shared/src/: chains.ts  i18n.ts  index.ts  locales.ts  types.ts
webapp/: next.config.js  package.json  tsconfig.json
webapp/src/app/: globals.css  layout.tsx  page.tsx
webapp/src/app/api/analyze/: route.ts
webapp/src/app/api/score/[address]/: route.ts
webapp/src/app/inspect/: page.tsx
webapp/src/app/onboarding/: page.tsx
webapp/src/components/: I18nProvider.tsx  LocaleSwitcher.tsx
webapp/src/lib/: i18n.ts
