[project]
name = "clarity-indexer"
version = "0.1.0"
description = "Cross-protocol lending history indexer for Clarity credit scoring (Mode 3)."
requires-python = ">=3.10"
dependencies = [
    "web3>=6.20",
    "aiohttp>=3.10",
    "pydantic>=2.9",
    "sqlalchemy>=2.0",
    "duckdb>=1.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
strict = true
